[gd_scene load_steps=33 format=2]

[ext_resource path="res://scenes/scripts/MainScene.gd" type="Script" id=1]
[ext_resource path="res://resources/imgs/arduino_logo.png" type="Texture" id=2]
[ext_resource path="res://resources/fonts/new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://resources/fonts/ARLRDBD.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://resources/imgs/Path 0.png" type="Texture" id=5]
[ext_resource path="res://scenes/scripts/status_icon.gd" type="Script" id=6]
[ext_resource path="res://scenes/scripts/moisture.gd" type="Script" id=7]
[ext_resource path="res://scenes/scripts/Tree.gd" type="Script" id=8]
[ext_resource path="res://scenes/scripts/Debug.gd" type="Script" id=9]
[ext_resource path="res://scenes/scripts/Log.gd" type="Script" id=10]
[ext_resource path="res://resources/imgs/Background(2).png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 256, 256 )
margin = Rect2( 20, 0, 20, 0 )
filter_clip = true

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 6.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.195185, 0.195185, 0.216309, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.145098, 0.145098, 0.164706, 1 )

[sub_resource type="DynamicFont" id=10]
size = 20
outline_color = Color( 1, 0.501961, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=11]
size = 30
outline_color = Color( 1, 0.501961, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=12]
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=13]
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0.72549, 0.74902, 1 )
border_width_top = 1
border_color = Color( 0, 0.658824, 0.682353, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0.592157, 0.611765, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.0142822, 0.442841, 0.457031, 1 )
border_blend = true
corner_detail = 10

[sub_resource type="DynamicFont" id=15]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=16]
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.806152, 0.0535336, 0.234792, 1 )
border_width_top = 1
border_color = Color( 0.682353, 0, 0.172549, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.67451, 0, 0.164706, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.458824, 0.0156863, 0.137255, 1 )
border_blend = true
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=18]
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.74902, 0, 0.180392, 1 )
border_width_top = 1
border_color = Color( 0.682353, 0, 0.176471, 1 )

[sub_resource type="DynamicFont" id=19]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=20]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Filter:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Filter:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.420448, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Menu:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -450, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Menu:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=21]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Filter:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Filter:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.659754, 1.03527 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Menu:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -450, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Menu:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="MainScene" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.592157, 0.611765, 1 )

[node name="Logo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -68.0
margin_right = 50.0
texture = ExtResource( 2 )
expand = true

[node name="DeviceChoice" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label2" type="Label" parent="DeviceChoice"]
anchor_top = 0.098
anchor_right = 1.0
anchor_bottom = 0.144
margin_top = -0.352005
margin_bottom = -0.455994
custom_fonts/font = ExtResource( 3 )
text = "Webserver Connection"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="DeviceChoice"]
anchor_left = 0.083
anchor_top = 0.199
anchor_right = 0.918
anchor_bottom = 0.674
margin_left = 0.191998
margin_top = 0.223984
margin_right = 0.231995
margin_bottom = -2.17603
custom_constants/separation = 5
alignment = 1

[node name="Label" type="Label" parent="DeviceChoice/VBoxContainer"]
margin_right = 481.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 3 )
text = "Webserver IP:"

[node name="webserver_ip" type="LineEdit" parent="DeviceChoice/VBoxContainer"]
margin_top = 52.0
margin_right = 481.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 3 )
clear_button_enabled = true

[node name="Label2" type="Label" parent="DeviceChoice/VBoxContainer"]
margin_top = 114.0
margin_right = 481.0
margin_bottom = 161.0
custom_fonts/font = ExtResource( 3 )
text = "Assign a name:"

[node name="webserver_name" type="LineEdit" parent="DeviceChoice/VBoxContainer"]
margin_top = 166.0
margin_right = 481.0
margin_bottom = 223.0
custom_fonts/font = ExtResource( 3 )
clear_button_enabled = true

[node name="Label4" type="Label" parent="DeviceChoice/VBoxContainer"]
margin_top = 228.0
margin_right = 481.0
margin_bottom = 242.0

[node name="HBoxContainer2" type="HBoxContainer" parent="DeviceChoice/VBoxContainer"]
margin_top = 247.0
margin_right = 481.0
margin_bottom = 289.0
size_flags_vertical = 0
alignment = 1

[node name="connect" type="Button" parent="DeviceChoice/VBoxContainer/HBoxContainer2"]
margin_left = 19.0
margin_right = 219.0
margin_bottom = 42.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 200, 0 )
focus_mode = 0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "connect"
clip_text = true

[node name="disconnect" type="Button" parent="DeviceChoice/VBoxContainer/HBoxContainer2"]
margin_left = 261.0
margin_right = 461.0
margin_bottom = 42.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "disconnect"
clip_text = true

[node name="Space" type="Label" parent="DeviceChoice/VBoxContainer"]
margin_top = 294.0
margin_right = 481.0
margin_bottom = 391.0
custom_fonts/font = ExtResource( 3 )
text = "
"

[node name="HBoxContainer" type="HBoxContainer" parent="DeviceChoice/VBoxContainer"]
margin_top = 396.0
margin_right = 481.0
margin_bottom = 443.0
alignment = 1

[node name="Label3" type="Label" parent="DeviceChoice/VBoxContainer/HBoxContainer"]
margin_left = 77.0
margin_right = 360.0
margin_bottom = 47.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "Device Status:"
align = 1

[node name="status2" type="TextureRect" parent="DeviceChoice/VBoxContainer/HBoxContainer"]
margin_left = 364.0
margin_right = 404.0
margin_bottom = 47.0
rect_min_size = Vector2( 40, 40 )
rect_clip_content = true
size_flags_horizontal = 4
size_flags_vertical = 7
texture = SubResource( 3 )
expand = true
stretch_mode = 6
script = ExtResource( 6 )

[node name="state_message" type="Label" parent="DeviceChoice/VBoxContainer"]
margin_left = 27.0
margin_top = 448.0
margin_right = 454.0
margin_bottom = 484.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 4 )
text = "no webserver to connect to..."

[node name="DeviceManager" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="DeviceManager"]
anchor_top = 0.098
anchor_right = 1.0
anchor_bottom = 0.144
margin_top = -0.352005
margin_bottom = -0.456009
custom_fonts/font = ExtResource( 3 )
text = "Webserver Manager"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="DeviceManager"]
anchor_top = 0.156
anchor_right = 1.0
anchor_bottom = 0.195
margin_left = 73.0
margin_top = 0.255997
margin_right = -73.0
margin_bottom = 0.319992
alignment = 1

[node name="w_name" type="LineEdit" parent="DeviceManager/HBoxContainer"]
margin_right = 184.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 5 )
text = "webserver_name"
align = 1
editable = false
expand_to_text_length = true
context_menu_enabled = false

[node name="Label2" type="Label" parent="DeviceManager/HBoxContainer"]
margin_left = 188.0
margin_top = 7.0
margin_right = 194.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 6 )
text = ":"
align = 1
valign = 1

[node name="w_ip" type="LineEdit" parent="DeviceManager/HBoxContainer"]
margin_left = 198.0
margin_right = 346.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 5 )
text = "webserver_ip"
align = 1
editable = false
expand_to_text_length = true
context_menu_enabled = false

[node name="status" type="TextureRect" parent="DeviceManager/HBoxContainer"]
margin_left = 350.0
margin_right = 430.0
margin_bottom = 39.0
rect_min_size = Vector2( 80, 0 )
rect_clip_content = true
size_flags_vertical = 7
texture = SubResource( 3 )
expand = true
stretch_mode = 6
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="DeviceManager"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -194.0
margin_bottom = -76.0
custom_constants/separation = 20
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="DeviceManager/VBoxContainer"]
margin_right = 576.0
margin_bottom = 57.0
size_flags_horizontal = 7
alignment = 1

[node name="moisture" type="LineEdit" parent="DeviceManager/VBoxContainer/HBoxContainer2"]
margin_left = 150.0
margin_right = 280.0
margin_bottom = 57.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "---"
align = 1
editable = false
expand_to_text_length = true
script = ExtResource( 7 )

[node name="moisture_btn" type="CheckBox" parent="DeviceManager/VBoxContainer/HBoxContainer2"]
margin_left = 284.0
margin_right = 426.0
margin_bottom = 57.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 7 )
text = "Umidità"

[node name="HBoxContainer3" type="HBoxContainer" parent="DeviceManager/VBoxContainer"]
margin_top = 77.0
margin_right = 576.0
margin_bottom = 121.0
size_flags_horizontal = 7
alignment = 1

[node name="led1" type="CheckButton" parent="DeviceManager/VBoxContainer/HBoxContainer3"]
margin_left = 125.0
margin_right = 286.0
margin_bottom = 44.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 7 )
text = "Led 1"

[node name="led2" type="CheckButton" parent="DeviceManager/VBoxContainer/HBoxContainer3"]
margin_left = 290.0
margin_right = 451.0
margin_bottom = 44.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 7 )
text = "Led 2"

[node name="WebServerList" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="WebServerList"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.0
margin_top = -412.0
margin_right = 165.0
margin_bottom = -365.0
custom_fonts/font = ExtResource( 3 )
text = "Webserver List"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="WebServerList"]
editor/display_folded = true
anchor_top = 0.176
anchor_right = 1.0
anchor_bottom = 0.199
margin_left = 48.0
margin_top = -0.224014
margin_right = -47.0
margin_bottom = 0.223984
grow_horizontal = 2
alignment = 1

[node name="Label" type="Label" parent="WebServerList/HBoxContainer"]
margin_right = 131.0
margin_bottom = 24.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 8 )
text = "Webserver ip"
align = 1
valign = 1

[node name="sep" type="Label" parent="WebServerList/HBoxContainer"]
margin_left = 135.0
margin_right = 141.0
margin_bottom = 24.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 8 )
text = "|"
align = 1
valign = 1

[node name="Label2" type="Label" parent="WebServerList/HBoxContainer"]
margin_left = 145.0
margin_right = 312.0
margin_bottom = 24.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 8 )
text = "Webserver name"
align = 1
valign = 1

[node name="sep2" type="Label" parent="WebServerList/HBoxContainer"]
margin_left = 316.0
margin_right = 322.0
margin_bottom = 24.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 8 )
text = "|"
align = 1
valign = 1

[node name="Label3" type="Label" parent="WebServerList/HBoxContainer"]
margin_left = 326.0
margin_right = 481.0
margin_bottom = 24.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 8 )
text = "Last connection"
align = 1
valign = 1

[node name="Tree" type="Tree" parent="WebServerList"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 50.0
margin_top = -302.0
margin_right = -50.0
margin_bottom = 368.0
size_flags_horizontal = 6
columns = 3
hide_root = true
select_mode = 1
script = ExtResource( 8 )

[node name="Debug" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="Label2" type="Label" parent="Debug"]
anchor_top = 0.098
anchor_right = 1.0
anchor_bottom = 0.144
margin_top = -0.352005
margin_bottom = -0.456009
custom_fonts/font = ExtResource( 3 )
text = "Webserver Debug"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Debug"]
anchor_left = 0.057
anchor_top = 0.156
anchor_right = 0.943
anchor_bottom = 0.908
margin_left = 0.167999
margin_top = 0.255997
margin_right = -0.16803
margin_bottom = 0.207947
custom_styles/normal = SubResource( 9 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
scroll_following = true

[node name="Log" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="Label2" type="Label" parent="Log"]
anchor_top = 0.098
anchor_right = 1.0
anchor_bottom = 0.144
margin_top = -0.352005
margin_bottom = -0.456009
custom_fonts/font = ExtResource( 3 )
text = "Webserver Log"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Log"]
anchor_left = 0.057
anchor_top = 0.156
anchor_right = 0.943
anchor_bottom = 0.908
margin_left = 0.167999
margin_top = 0.255997
margin_right = -0.16803
margin_bottom = 0.207947
custom_styles/normal = SubResource( 9 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
scroll_following = true

[node name="Guide" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label2" type="Label" parent="Guide"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.0
margin_top = -412.0
margin_right = 165.0
margin_bottom = -365.0
custom_fonts/font = ExtResource( 3 )
text = "Guide"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Guide"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 33.0
margin_top = -352.0
margin_right = -33.0
margin_bottom = 418.0
custom_styles/normal = SubResource( 9 )
custom_fonts/normal_font = SubResource( 11 )
bbcode_enabled = true
bbcode_text = "[color=#ff8000]- Webserver Connection:[/color]
Connect to an ESP8266 Webserver using the ip given by your local wifi or hotspot. You can also give your webserver an alias-name with which the app will save it.

[color=#ff8000]- Webserver Manager:[/color]
Control and manage your ESP8266 throught Webserver client calls, based on the services your ESP offers.

[color=#ff8000]- Webserver Debug:[/color]
A debug interface of your ESP. Get text based informations about your ESP status, functions and interactions.

[color=#ff8000]- Webserver List:[/color]
List of all the Webservers you accessed to. They are stored with the alias you gave them, their IP and the date-time of your last connection. You can also fast-connect to them simply clicking on them and going to the Webserver Connection page."
text = "- Webserver Connection:
Connect to an ESP8266 Webserver using the ip given by your local wifi or hotspot. You can also give your webserver an alias-name with which the app will save it.

- Webserver Manager:
Control and manage your ESP8266 throught Webserver client calls, based on the services your ESP offers.

- Webserver Debug:
A debug interface of your ESP. Get text based informations about your ESP status, functions and interactions.

- Webserver List:
List of all the Webservers you accessed to. They are stored with the alias you gave them, their IP and the date-time of your last connection. You can also fast-connect to them simply clicking on them and going to the Webserver Connection page."

[node name="Filter" type="ColorRect" parent="."]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.705882 )

[node name="Menu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="Menu"]
show_behind_parent = true
anchor_bottom = 1.0
margin_right = 460.0
color = Color( 0.113725, 0.105882, 0.133333, 1 )

[node name="MenuContainer" type="VBoxContainer" parent="Menu"]
anchor_bottom = 1.0
margin_right = 460.0
margin_bottom = 5.0
custom_constants/separation = 0
alignment = 1

[node name="Label2" type="Label" parent="Menu/MenuContainer"]
margin_top = 25.0
margin_right = 460.0
margin_bottom = 82.0
size_flags_horizontal = 11
custom_styles/normal = SubResource( 12 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.113725, 0.105882, 0.133333, 1 )
text = "HOME"
align = 1
valign = 1

[node name="ChangeIP" type="Button" parent="Menu/MenuContainer"]
margin_top = 82.0
margin_right = 460.0
margin_bottom = 135.0
focus_mode = 0
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Webserver Connection"

[node name="Webserver" type="Button" parent="Menu/MenuContainer"]
margin_top = 135.0
margin_right = 460.0
margin_bottom = 188.0
focus_mode = 0
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Webserver Manager"

[node name="Debug" type="Button" parent="Menu/MenuContainer"]
margin_top = 188.0
margin_right = 460.0
margin_bottom = 241.0
focus_mode = 0
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Webserver Debug"

[node name="Log" type="Button" parent="Menu/MenuContainer"]
margin_top = 241.0
margin_right = 460.0
margin_bottom = 294.0
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Webserver Log"

[node name="WebserverList" type="Button" parent="Menu/MenuContainer"]
margin_top = 294.0
margin_right = 460.0
margin_bottom = 347.0
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Webserver List"

[node name="Guide" type="Button" parent="Menu/MenuContainer"]
margin_top = 347.0
margin_right = 460.0
margin_bottom = 400.0
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Guide"

[node name="spacer" type="Label" parent="Menu/MenuContainer"]
margin_top = 400.0
margin_right = 460.0
margin_bottom = 947.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.113725, 0.105882, 0.133333, 1 )
text = "









"
align = 1

[node name="Exit" type="Button" parent="Menu/MenuContainer"]
margin_top = 947.0
margin_right = 460.0
margin_bottom = 1004.0
focus_mode = 0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
custom_fonts/font = SubResource( 19 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Quit"

[node name="Overlay" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="MenuButton" type="TextureButton" parent="Overlay"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -76.0
margin_top = 10.0
margin_right = -16.0
margin_bottom = 70.0
texture_normal = ExtResource( 11 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/menu_in = SubResource( 20 )
anims/menu_out = SubResource( 21 )
[connection signal="pressed" from="DeviceChoice/VBoxContainer/HBoxContainer2/connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="DeviceChoice/VBoxContainer/HBoxContainer2/disconnect" to="." method="_on_disconnect_pressed"]
[connection signal="toggled" from="DeviceManager/VBoxContainer/HBoxContainer2/moisture_btn" to="." method="_on_moisture_btn_toggled"]
[connection signal="toggled" from="DeviceManager/VBoxContainer/HBoxContainer3/led1" to="." method="_on_led1_toggled"]
[connection signal="item_activated" from="WebServerList/Tree" to="." method="_on_Tree_item_activated"]
[connection signal="item_selected" from="WebServerList/Tree" to="." method="_on_Tree_item_selected"]
[connection signal="pressed" from="Menu/MenuContainer/ChangeIP" to="." method="_on_ChangeIP_pressed"]
[connection signal="pressed" from="Menu/MenuContainer/Webserver" to="." method="_on_Webserver_pressed"]
[connection signal="pressed" from="Menu/MenuContainer/Debug" to="." method="_on_Debug_pressed"]
[connection signal="pressed" from="Menu/MenuContainer/Log" to="." method="_on_Log_pressed"]
[connection signal="pressed" from="Menu/MenuContainer/WebserverList" to="." method="_on_WebserverList_pressed"]
[connection signal="pressed" from="Menu/MenuContainer/Guide" to="." method="_on_Guide_pressed"]
[connection signal="pressed" from="Menu/MenuContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Overlay/MenuButton" to="." method="_on_MenuButton_pressed"]
